--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "task1": "nodemon task1.js",
-    "task2": "nodemon task2.js"
+    "task1": "nodemon --exec babel-node task1.js",
+    "task2": "nodemon --exec babel-node task2.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +17,13 @@
     "url": "https://github.com/zhenokin/NodeJS-Global-Mentoring-Program-2020Q3/issues"
   },
   "homepage": "https://github.com/zhenokin/NodeJS-Global-Mentoring-Program-2020Q3#readme",
-
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
     "nodemon": "^2.0.4"
   },
-
   "dependencies": {
     "csvtojson": "^2.0.10"
   }
