--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
+    "express-joi-validation": "^4.0.4-beta.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
