--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-global-mentoring-program-2020q3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",
   "scripts": {
     "server": "nodemon --exec babel-node ./src/app.js"
   },
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.4-beta.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
